device except next, pre btn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
           <h1 id="artist" class="mp3-container__device__head__artist">
             artist
           </h1>
-          <div id="disk" class="mp3-container__device__head__disk">
+          <div
+            id="disk"
+            class="mp3-container__device__head__disk mp3-container__device__head__disk__pause"
+          >
             <div class="mp3-container__device__head__disk__point"></div>
           </div>
         </div>
@@ -47,12 +50,28 @@
               id="play-btn"
               class="mp3-container__device__body__bottons-wrap__play-btn--hover"
             ></div>
-            <!-- <div class="mp3-container__device__body__bottons-wrap__loop-btn--hover"></div>
-            <div class="mp3-container__device__body__bottons-wrap__volume-btn--hover"></div> -->
+            <div
+              id="loop-btn"
+              class="mp3-container__device__body__bottons-wrap__loop-btn--hover"
+            ></div>
+            <div id="volume-wrap" class="mp3-container__device__body__bottons-wrap__volume-wrap">
+              <div
+                id="volume-btn"
+                class="mp3-container__device__body__bottons-wrap__volume-wrap__volume-btn--hover"
+              ></div>
+              <input
+                id="volume-range"
+                class="mp3-container__device__body__bottons-wrap__volume-wrap__volume-range mp3-container__device__body__bottons-wrap__volume-wrap__volume-range--hidden"
+                type="range"
+                value="10"
+                min="0"
+                max="100"
+              />
+            </div>
           </div>
         </div>
       </div>
-      <input id="test_input" type="file" style="position: absolute" />
+      <input id="test_input" type="file" style="position: absolute" multiple />
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"
