--- a/index.html
+++ b/index.html
@@ -1,95 +1,61 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style/index.css" />
-  </head>
-  <body>
-    <audio class="audio"></audio>
-    <div class="mp3-container">
-      <div id="background" class="mp3-container__background"></div>
-      <div class="mp3-container__device">
-        <div class="mp3-container__device__head">
-          <h1 id="title" class="mp3-container__device__head__title">title</h1>
-          <h1 id="artist" class="mp3-container__device__head__artist">
-            artist
-          </h1>
-          <div
-            id="disk"
-            class="mp3-container__device__head__disk mp3-container__device__head__disk__pause"
-          >
-            <div class="mp3-container__device__head__disk__point"></div>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style/index.css" />
+</head>
+
+<body>
+  <audio class="audio"></audio>
+  <div class="mp3-container">
+    <div id="background" class="mp3-container__background"></div>
+    <div class="mp3-container__device">
+      <div class="mp3-container__device__head">
+        <h1 id="title" class="mp3-container__device__head__title">title</h1>
+        <h1 id="artist" class="mp3-container__device__head__artist">
+          artist
+        </h1>
+        <div id="disk" class="mp3-container__device__head__disk mp3-container__device__head__disk__pause">
+          <div class="mp3-container__device__head__disk__point"></div>
         </div>
-        <div class="mp3-container__device__body">
-          <div class="mp3-container__device__body__track-wrap">
-            <h1
-              id="start-time"
-              class="mp3-container__device__body__track-wrap__start-time"
-            >
-              00:00
-            </h1>
-            <h1
-              id="end-time"
-              class="mp3-container__device__body__track-wrap__end-time"
-            >
-              00:00
-            </h1>
-            <input
-              id="timeline"
-              type="range"
-              class="mp3-container__device__body__track-wrap__timeline"
-              value="0"
-            />
-          </div>
-          <div class="mp3-container__device__body__bottons-wrap">
-            <div
-              id="prev-btn"
-              class="mp3-container__device__body__bottons-wrap__prev-btn--hover"
-            ></div>
-            <div
-              id="play-btn"
-              class="mp3-container__device__body__bottons-wrap__play-btn--hover"
-            ></div>
-            <div
-              id="next-btn"
-              class="mp3-container__device__body__bottons-wrap__next-btn--hover"
-            ></div>
-            <div
-              id="loop-btn"
-              class="mp3-container__device__body__bottons-wrap__loop-btn--hover"
-            ></div>
-            <div
-              id="volume-wrap"
-              class="mp3-container__device__body__bottons-wrap__volume-wrap"
-            >
-              <div
-                id="volume-btn"
-                class="mp3-container__device__body__bottons-wrap__volume-wrap__volume-btn--hover"
-              ></div>
-              <input
-                id="volume-range"
-                class="mp3-container__device__body__bottons-wrap__volume-wrap__volume-range mp3-container__device__body__bottons-wrap__volume-wrap__volume-range--hidden"
-                type="range"
-                value="10"
-                min="0"
-                max="100"
-              />
+      </div>
+      <div class="mp3-container__device__body">
+        <div class="mp3-container__device__body__track-wrap">
+          <h1 id="start-time" class="mp3-container__device__body__track-wrap__start-time">
+            00:00
+          </h1>
+          <h1 id="end-time" class="mp3-container__device__body__track-wrap__end-time">
+            00:00
+          </h1>
+          <input id="timeline" type="range" class="mp3-container__device__body__track-wrap__timeline" value="0" />
+        </div>
+        <div class="mp3-container__device__body__bottons-wrap">
+          <div id="prev-btn" class="mp3-container__device__body__bottons-wrap__prev-btn--hover"></div>
+          <div id="play-btn" class="mp3-container__device__body__bottons-wrap__play-btn--hover"></div>
+          <div id="next-btn" class="mp3-container__device__body__bottons-wrap__next-btn--hover"></div>
+          <div id="loop-btn" class="mp3-container__device__body__bottons-wrap__loop-btn--hover"></div>
+          <div id="shuffle-btn" class="mp3-container__device__body__bottons-wrap__shuffle-btn--hover"></div>
+          <div id="volume-wrap" class="mp3-container__device__body__bottons-wrap__volume-wrap">
+            <div id="volume-btn" class="mp3-container__device__body__bottons-wrap__volume-wrap__volume-btn--hover">
             </div>
+            <input id="volume-range"
+              class="mp3-container__device__body__bottons-wrap__volume-wrap__volume-range mp3-container__device__body__bottons-wrap__volume-wrap__volume-range--hidden"
+              type="range" value="10" min="0" max="100" />
           </div>
         </div>
       </div>
-      <input id="test_input" type="file" style="position: absolute" multiple />
     </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script type="text/javascript" src="/javascript/index.js"></script>
-    <script type="text/javascript" src="/javascript/function.js"></script>
-    <script type="text/javascript" src="/javascript/event.js"></script>
-  </body>
+    <input id="test_input" type="file" style="position: absolute" multiple />
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"
+    referrerpolicy="no-referrer"></script>
+  <script type="text/javascript" src="/javascript/index.js"></script>
+  <script type="text/javascript" src="/javascript/function.js"></script>
+  <script type="text/javascript" src="/javascript/event.js"></script>
+</body>
+
 </html>
