developing play list

--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
     </div>
     <input id="test_input" type="file" style="position: absolute" multiple />
   </div>
+  <div id="play-list-spread" class="play-list-spread">
+    <h1 class="play-list-spread__text">Play List</h1>
+    <div id="play-list-spread-bar" class="play-list-spread__bar">
+      <div class="play-list-spread__bar__arrow"></div>
+    </div>
+    <div class="play-list-spread__inner"></div>
+  </div>
+  <div id="play-list-folded" class="play-list-folded hidden-visibility">
+    <div id="play-list-folded-bar" class="play-list-folded__bar">
+      <div class="play-list-folded__bar__arrow"></div>
+    </div>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"
     referrerpolicy="no-referrer"></script>
   <script type="text/javascript" src="/javascript/index.js"></script>
