play list developing

--- a/index.html
+++ b/index.html
@@ -60,25 +60,7 @@
     <div id="play-list-spread-bar" class="play-list-spread__bar">
       <div class="play-list-spread__bar__arrow"></div>
     </div>
-    <div class="play-list-spread__inner">
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:bisque;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:aquamarine;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:blanchedalmond;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(127, 168, 255);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:aquamarine;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(255, 127, 191);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:aquamarine;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(195, 255, 127);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:aquamarine;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(255, 127, 180);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:aquamarine;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(255, 174, 127);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(255, 127, 255);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(255, 127, 180);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:aquamarine;"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(255, 174, 127);"></div>
-      <div style="width: 21.7rem; height: 4rem; margin-left: 3.3rem; background-color:rgb(255, 127, 255);"></div>
-    </div>
+    <div id="play-list-inner" class="play-list-spread__inner"></div>
   </div>
   <div id="play-list-folded" class="play-list-folded hidden-visibility">
     <div id="play-list-folded-bar" class="play-list-folded__bar">
