--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
   <audio class="audio"></audio>
+  <div class="alert-wrap">
+    <div class="alert-wrap__modal"></div>
+    <div class="alert-wrap__background"></div>
+  </div>
   <div class="mp3-container">
     <div id="background" class="mp3-container__background"></div>
     <div class="mp3-container__device">
