--- a/index.html
+++ b/index.html
@@ -116,9 +116,17 @@
     <div id="play-list-spread" class="play-list-spread">
       <h1 class="play-list-spread__text">Play List</h1>
       <div class="play-list-spread__btn-wrap">
-        <label class="play-list-spread__btn-wrap__add--hover" for="add" data-tooltip-relative="음악추가"></label>
+        <label
+          class="play-list-spread__btn-wrap__add--hover"
+          for="add"
+          data-tooltip-relative="음악추가"
+        ></label>
         <input type="file" id="add" style="display: none" multiple />
-        <div id="clear" class="play-list-spread__btn-wrap__clear--hover" data-tooltip-relative="전체삭제"></div>
+        <div
+          id="clear"
+          class="play-list-spread__btn-wrap__clear--hover"
+          data-tooltip-relative="전체삭제"
+        ></div>
       </div>
       <div id="play-list-spread-bar" class="play-list-spread__bar">
         <div class="play-list-spread__bar__arrow"></div>
