--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style/index.css" />
+    <link rel="stylesheet" href="./style/index.css" />
   </head>
 
   <body>
@@ -13,7 +13,7 @@
     <div id="alert" class="alert-wrap hidden-visibility">
       <div class="alert-wrap__modal">
         <h1 id="message" class="alert-wrap__modal__message"></h1>
-        <img class="alert-wrap__modal__img" src="/img/alert.png" />
+        <img class="alert-wrap__modal__img" src="./img/alert.png" />
         <div class="alert-wrap__modal__btn-wrap">
           <button
             type="button"
@@ -142,8 +142,8 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"
       referrerpolicy="no-referrer"
     ></script>
-    <script type="text/javascript" src="/javascript/index.js"></script>
-    <script type="text/javascript" src="/javascript/function.js"></script>
-    <script type="text/javascript" src="/javascript/event.js"></script>
+    <script type="text/javascript" src="./javascript/index.js"></script>
+    <script type="text/javascript" src="./javascript/function.js"></script>
+    <script type="text/javascript" src="./javascript/event.js"></script>
   </body>
 </html>
